[package]
name = "accumulator-demo"
version = "0.1.0"
edition = "2018"
authors = [
  "Pablo Aldape <pablo@vest.io>",
  "Lucas Ege <lucas@vest.io>",
  "Sanjay Kannan <sanjay@vest.io>",
  "Eddie Wang <eddie@vest.io>"
]
description = "A demo suite for the accumulator crate."
keywords = ["cryptography", "demo", "accumulator", "rsa", "vector", "commitment"]
readme = "README.md"
repository = "https://github.com/1protocol/accumulator-demo"

[dependencies]
accumulator = { git = "https://github.com/1protocol/accumulator.git", branch="derive-debug" }
crossbeam = "0.7.1"
multiqueue = "0.3.2"
rug = "1.3.0"
uuid = { version= "0.7.2", features = ["v4"] }
