[package]
name = "accumulator-demo"
version = "0.2.0"
edition = "2018"
authors = [
  "Pablo Aldape <pablo.aldape@gmail.com>",
  "Lucas Ege <egelucas@gmail.com>",
  "Sanjay Kannan <whaatt@gmail.com>",
  "Eddie Wang <eddiew@cs.stanford.edu>"
]
description = "A demo suite for the accumulator crate."
keywords = ["cryptography", "demo", "accumulator", "rsa", "vector", "commitment"]
readme = "README.md"
repository = "https://github.com/cambrian/accumulator-demo"

[dependencies]
accumulator = { git = "https://github.com/cambrian/accumulator.git" }
gmp-mpfr-sys = "1.1.12"
multiqueue = "0.3.2"
rug = "1.3.0"
uuid = { version= "0.7.4", features = ["v4"] }
